# xml_rs

./: .deepsource.toml  .gitignore  COMMERCIAL-LICENSE.md  Cargo.toml  LICENSE  README.MD  azure-pipelines.yml  tarpaulin.toml
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
lib/src/dom/: attribute.rs  document.rs  element.rs  mod.rs  namespace.rs  xpath.rs
lib/src/macros/: logging.rs  mod.rs
lib/src/parser/: mod.rs  xml_deserializer.rs  xml_serializer.rs
lib/src/utils/: mod.rs  validation.rs
src/: lib.rs
src/dom/: mod.rs
src/parser/: mod.rs  xml_serializer.rs
tests/: Cargo.toml
tests/src/: main.rs  xml.rs
