[package]
name = "draviavemal-xml_rs"
version = "1.0.0"
edition = "2021"
readme = "../README.MD"
keywords = ["xml", "xml-rs", "dom"]
categories = ["filesystem", "development-tools"]
license = "AGPL-3.0-only"
repository = "https://github.com/DraviaVemal/xml_rs"
documentation = "https://docs.rs/draviavemal-xml_rs"
homepage = "https://github.com/DraviaVemal/xml_rs"
description = "A high-performance, low-memory XML DOM parser for Rust — with namespace-aware parsing, order-preserving attributes, and round-trip safe serialization."
authors = ["Dravia Vemal <contact@draviavemal.com>"]

[dependencies]
anyhow.workspace = true
quick-xml.workspace = true
chrono.workspace = true
